--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Igor Bettio\\AppData\\Roaming\\.jmonkeyplatform\\3.1.0-stable-FINAL\\build.properties
+user.properties.file=C:\\Users\\Pichau\\AppData\\Roaming\\.jmonkeyplatform\\3.1.0-stable-FINAL\\build.properties
